--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.fastq.gz filter=lfs diff=lfs merge=lfs -text
 *.fa.gz filter=lfs diff=lfs merge=lfs -text
 *.gtf.gz filter=lfs diff=lfs merge=lfs -text
+*.tar.gz filter=lfs diff=lfs merge=lfs -text
