--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.fa.gz filter=lfs diff=lfs merge=lfs -text
 *.gtf.gz filter=lfs diff=lfs merge=lfs -text
 *.tar.gz filter=lfs diff=lfs merge=lfs -text
+*.bed.gz filter=lfs diff=lfs merge=lfs -text
